--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   sqflite: ^0.10.0
   path_provider: ^0.4.1
-  fp: '>=0.4.2 <0.5.0'
+  rxdart: ^0.18.0
 
 dev_dependencies:
   flutter_test:
